--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -74,16 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Frog', 'HeadBack', 'Left', 'Knee', 'Crouch', 'Back', 'Belly', 'Right', 'Sit', 'Stand', 'StandInit']\n"
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print' (<ipython-input-2-e31a71b90298>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-e31a71b90298>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print classes\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'\n"
      ]
     }
    ],
