--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -50,14 +50,11 @@
      ]
     },
     {
-     "ename": "ImportError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-2d80a1f9af90>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msvm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mROBOT_POSE_DATA_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'robot_pose_data'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'sklearn'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: pylab import has clobbered these variables: ['clf', 'permutation']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -73,17 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print' (<ipython-input-2-e31a71b90298>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-e31a71b90298>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print classes\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Frog', 'HeadBack', 'Left', 'Knee', 'Crouch', 'Back', 'Belly', 'Right', 'Sit', 'Stand', 'StandInit']\n"
      ]
     }
    ],
@@ -132,10 +128,6 @@
     "all_data = []\n",
     "all_target = []\n",
     "# YOUR CODE HERE\n",
-    "for i in range(len(classes)) :\n",
-    "    data, target = load_pose_data(i)\n",
-    "    all_data = all_data + data\n",
-    "    all_target = all_target + target\n",
     "\n",
     "print 'total number of data', len(all_data)"
    ]
@@ -202,8 +194,7 @@
     }
    ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "clf.fit(all_data, all_target)"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -297,8 +288,6 @@
     "expected = []\n",
     "predicted = []\n",
     "# YOUR CODE HERE\n",
-    "expected = all_target\n",
-    "predicted =clf.predict(all_data)\n",
     "\n",
     "evaluate(expected, predicted)"
    ]
@@ -426,21 +415,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
