--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,14 +47,6 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pylab import has clobbered these variables: ['clf', 'permutation']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -70,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -79,18 +71,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Frog', 'HeadBack', 'Left', 'Knee', 'Crouch', 'Back', 'Belly', 'Right', 'Sit', 'Stand', 'StandInit']\n"
+      "['Stand', 'Frog', 'StandInit', 'Right', 'Sit', 'Back', 'Belly', 'HeadBack', 'Crouch', 'Left', 'Knee']\n"
      ]
     }
    ],
    "source": [
     "classes = listdir(ROBOT_POSE_DATA_DIR)\n",
-    "print classes"
+    "print(classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -110,16 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total number of data 200\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-90aec2fb343f>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-90aec2fb343f>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    print 'total number of data', len(all_data)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -128,8 +121,12 @@
     "all_data = []\n",
     "all_target = []\n",
     "# YOUR CODE HERE\n",
+    "for i in range(len(classes)) :\n",
+    "    data, target = load_pose_data(i)\n",
+    "    all_data = all_data + data\n",
+    "    all_target = all_target + target\n",
     "\n",
-    "print 'total number of data', len(all_data)"
+    "print('total number of data', len(all_data))"
    ]
   },
   {
@@ -194,7 +191,8 @@
     }
    ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "clf.fit(all_data, all_target)"
    ]
   },
   {
@@ -288,6 +286,8 @@
     "expected = []\n",
     "predicted = []\n",
     "# YOUR CODE HERE\n",
+    "expected = all_target\n",
+    "predicted =clf.predict(all_data)\n",
     "\n",
     "evaluate(expected, predicted)"
    ]
@@ -415,21 +415,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   },
   "widgets": {
    "state": {},
